firewall.conf
# Generated by iptables-save v1.4.21 on Sat Nov 16 15:49:36 2019
*filter
:INPUT ACCEPT [132:35057]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [93:10738]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.10.2/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eth0 -o eth2 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -i eth0 -o eth2 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -p tcp -m tcp --sport 8080 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.10.2/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Nov 16 15:49:36 2019
# Generated by iptables-save v1.4.21 on Sat Nov 16 15:49:36 2019
*nat
:PREROUTING ACCEPT [3:635]
:INPUT ACCEPT [3:635]
:OUTPUT ACCEPT [1:328]
:POSTROUTING ACCEPT [1:328]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Nov 16 15:49:36 2019
